--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.30.0
-tensorflow==2.20.0
-numpy>=1.26,<2.1
+streamlit>=1.30
+tensorflow-cpu==2.15.0
+keras==2.15.0
+numpy>=1.23,<2.0
 pandas
-Pillow
 scikit-learn
+pillow
