--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit>=1.30
-tensorflow-cpu==2.15.0
-keras==2.15.0
-numpy>=1.23,<2.0
-pandas
+streamlit
+tensorflow==2.15.0
+numpy
 scikit-learn
-pillow
+joblib
